# ChangeLog for kde-misc/kanyremote
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.45 2014/11/18 13:49:43 mrueg Exp $

  18 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -files/disable_bluetooth.patch:
  Cleanup unused patches.

*kanyremote-6.3.4 (07 Oct 2014)

  07 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +kanyremote-6.3.4.ebuild:
  Version bump.

*kanyremote-6.3.3 (24 Sep 2014)

  24 Sep 2014; Manuel Rüger <mrueg@gentoo.org> +kanyremote-6.3.3.ebuild:
  Version bump.

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> -kanyremote-6.1.ebuild,
  -kanyremote-6.2.ebuild, -kanyremote-6.3.1.ebuild, kanyremote-6.3.2.ebuild:
  Mark stable on amd64. Cleanup old. Fixes bug #518434

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> kanyremote-6.3.2.ebuild:
  x86 stable wrt bug #518434

*kanyremote-6.3.2 (01 Jun 2014)

  01 Jun 2014; Markos Chandras <hwoarang@gentoo.org> +kanyremote-6.3.2.ebuild,
  metadata.xml:
  Version bump and drop myself as maintainer

*kanyremote-6.3.1 (21 Sep 2013)

  21 Sep 2013; Markos Chandras <hwoarang@gentoo.org> +kanyremote-6.3.1.ebuild:
  Version bump

  11 Sep 2013; Michael Palimaka <kensington@gentoo.org> kanyremote-6.2.ebuild:
  Fix failing patch wrt bug #484092. Tidy ebuild.

  11 Sep 2013; Michael Palimaka <kensington@gentoo.org> kanyremote-6.2.ebuild:
  Improve python support - enforce USE dependencies, allow the package to work
  with all supported python implementations, and do not fail when an unsupported
  implementation is selected.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> kanyremote-6.2.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*kanyremote-6.2 (25 Jul 2013)

  25 Jul 2013; Chris Reffett <creffett@gentoo.org> +kanyremote-6.2.ebuild:
  Version bump, migrate to python-single-r1

  01 Apr 2013; Michael Palimaka <kensington@gentoo.org>
  -kanyremote-6.0.1.ebuild:
  Remove old.
