@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kanyremote
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.45 2014/11/18 13:49:43 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.46 2015/01/09 13:43:14 ago Exp $
+
+  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> kanyremote-6.3.4.ebuild:
+  Stable for amd64, wrt bug #535428
 
   18 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -files/disable_bluetooth.patch:
   Cleanup unused patches.
